--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -49,5 +49,8 @@
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
     "html-to-text": "7.0.0"
+  },
+  "resolutions": {
+    "handlebars": "4.7.7"
   }
 }
