--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -56,5 +56,8 @@
     "html-to-text": "7.0.0",
     "lodash": "^4.17.21",
     "querystring": "^0.2.1"
+  },
+  "resolutions": {
+    "handlebars": "4.7.7"
   }
 }
